<resources>
    <string name="app_name">X-431 PRO</string>
    <string name="print_launch">LAUNCH</string>
    <string name="print_automobile_fault_diagnosis_test_report">Vehicle diagnostic report</string>
    <string name="print_success">Printing was successful!</string>
    <string name="print_jam">Paper jam</string>
    <string name="print_will_nopaper">The printer will be out of paper soon</string>
    <string name="print_no_paper">The printer is out of paper</string>
    <string name="print_actuator_fault">Printer fault!</string>
    <string name="print_head_overheating">The printer is overheating</string>
    <string name="print_connect_printer">Please connect your Wi-Fi printer first</string>
    <string name="crash_hint">The App has encountered an internal error, and will be terminated.</string>
    <string name="imWait">Please wait</string>
    <string name="sendFile">Send File</string>
    <string name="back_root">Home</string>
    <string name="back_upper">Up</string>
    <string name="save_to_local">Save</string>
    <string name="amount_years">Year</string>
    <string name="amount_month">Month</string>
    <string name="remote_diagnosis">Remote Diagnosis</string>
    <string name="leftBtn">Back</string>
    <string name="rightBtn">OK</string>
    <string name="login_success">Login succeeded</string>
    <string name="amount_ok">OK</string>
    <string name="network_not_available">Network unavailable!</string>
    <string name="success_connection">Connected</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="connected_conflict">Connection error!</string>
    <string name="disconnect">Disconnected!</string>
    <string name="another_device_login">This account has been logged in from another device!</string>
    <string name="re_login">Re-login</string>
    <string name="timeout_login">Login timeout</string>
    <string name="cancel">Cancel</string>
    <string name="selectLocalPhotos">Choose a photo</string>
    <string name="selectLocalFile">Choose File</string>
    <string name="photograph">Take a photo</string>
    <string name="notSdCard">No SD card found</string>
    <string name="confirm">confirm</string>
    <string name="cancle">cancel</string>
    <string name="save_pic_failure">Saving image error:</string>
    <string name="progress_loading">Loading ...</string>
    <string name="my_report">Reports</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_set">Set</string>
    <string name="btn_confirm">Confirm</string>
    <string name="http_time_out">Request timed out!</string>
    <string name="http_server_err">Server is not responding!</string>
    <string name="http_network_err">Network error!</string>
    <string name="http_no_network">Network unavailable!</string>
    <string name="loading">Loading ...</string>
    <string name="send_message">Message</string>
    <string name="deleteF">Delete</string>
    <string name="send_finish">Sent</string>
    <string name="chatSend">Send</string>
    <string name="takepicture">Take Photo</string>
    <string name="choosephotos">Choose a photo</string>
    <string name="cm_cancle">Cancel</string>
    <string name="recording">Hold to Talk</string>
    <string name="chat_bg_setting">Chat Background</string>
    <string name="str_err_nosd">Memory card not installed</string>
    <string name="str_button1">Camera</string>
    <string name="str_button2">Camera</string>
    <string name="str_take_picture">Take Photo</string>
    <string name="sendMes">Message</string>
    <string name="record_dialog_message">Move up to cancel</string>
    <string name="chat_warning">Network is unavailable, please check your network settings.</string>
    <string name="re_send">Resend</string>
    <string name="yesterday2">Yesterday</string>
    <string name="before_dawn">Before dawn</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Aftertoon</string>
    <string name="nightfall">Sunset</string>
    <string name="night">Night</string>
    <string name="share_transmit">Forward</string>
    <string name="share_personal_image_num1">Total </string>
    <string name="share_personal_image_num2"> images</string>
    <string name="share_loading">Loading ...</string>
    <string name="share_login_again">Please login again!</string>
    <string name="share_voice_too_short">Voice recording cannot be less than 1 second!</string>
    <string name="remote_dialog_ok">OK</string>
    <string name="minute">minutes</string>
    <string name="hour">hours</string>
    <string name="pwd_error">Password incorrect!</string>
    <string name="sd_no_storage_space">SD card space insufficient</string>
    <string name="text">Text</string>
    <string name="favor_picture">Image</string>
    <string name="photo">Image</string>
    <string name="file">File</string>
    <string name="size_overflow">File size cannot exceed 5 MB!</string>
    <string name="file_size_supper5">File size cannot exceed 5 MB!</string>
    <string name="req_remote_diag">Request Remote Diagnosis</string>
    <string name="save_group">Save succeeded</string>
    <string name="confirm_string">OK</string>
    <string name="cancle_string">Cancel</string>
    <string name="add_string">Invite </string>
    <string name="quit_string">Leave</string>
    <string name="test_report">Inspection Report</string>
    <string name="picture">Image</string>
    <string name="repeat_string">Reply</string>
    <string name="day">Day</string>
    <string name="no_network_info">Network unavailable!</string>
    <string name="parser_failure">Parse failed!</string>
    <string name="wait_response_failure">Server request failed!</string>
    <string name="copy_string">Copy</string>
    <string name="store_string">Favorite</string>
    <string name="begin_uploading">Start load</string>
    <string name="load_failure">Loading failed!</string>
    <string name="record_voice">Hold to Talk</string>
    <string name="bg_setting_string">Set as Background</string>
    <string name="notification">[Notice]</string>
    <string name="file_from_myreport">My Report</string>
    <string name="record_cancle_string">Release to cancel</string>
    <string name="recording_time_toolong">Voice recording has exceeded 60 seconds!</string>
    <string name="remote_diag">Remote Diagnosis</string>
    <string name="request_remote_diagnose">A remote diagnostic request was sent to you</string>
    <string name="receive_diagnose">Accept</string>
    <string name="diagnose_refuse">Reject</string>
    <string name="remote_appraise_success">I have an evaluation for this remote diagnostic</string>
    <string name="select_images">Select image</string>
    <string name="msg_title">message</string>
    <string name="resend_msg">Message sending failure, resend the message?</string>
    <string name="resend_tt">Resend</string>
    <string name="show_pic_loadfail">Picture loading failure</string>
    <string name="start_room_error">open error!</string>
    <string name="request_diagnose">Accept remote diagnostic help?</string>
    <string name="error_im_ver">unknown version!</string>
    <string name="waitforotherstart">Accepted, please wait for the remote diagnosis to start</string>
    <string name="canlce_remotediag">I cancelled the remote diagnosis request</string>
    <string name="remote_diag_title_name">Remote Diagnosis</string>
    <string name="remote_diag_fail">Server connection failed!</string>
    <string name="you_need_update">You need to update your application!</string>
    <string name="remote_diag_accept">Request accepted, please wait for the connection ...</string>
    <string name="remote_diag_refuse_1">The technician is currently unavailable. Please send the request later.</string>
    <string name="remote_diag_start">Start remote diagnosis</string>
    <string name="stop_remote">Stop remote diagnosis</string>
    <string name="remote_diagnosing">Busy</string>
    <string name="remote_begin_waiting">Please wait.</string>
    <string name="too_big">The file is too big.</string>
    <string name="no_car_report">No report found, please create a file first!</string>
    <string name="exit_toast">Tap again to exit the remote diagnosis</string>
    <string name="file_str">[File]</string>
    <string name="img_str">[Image]</string>
    <string name="sound_str">[Voice]</string>
    <string name="look_str">[Emoticon]</string>
    <string name="restart_IM">Please restart IM</string>
    <string name="cheyundiagnose_name">Diagnose</string>
    <string name="cheyunteam_name">Team</string>
    <string name="diagnose_timeout">Time out.</string>
    <string name="report_title">Report</string>
    <string name="report_hit">Loading ...</string>
    <string name="file_open_fail">You need to install appropriate application software to open this file</string>
    <string name="news">News</string>
    <string name="remote_notify">New remote diagnosis request</string>
    <string name="bunding_notify">New Registered Customer</string>
    <string name="bindingdev_notify">New Registered Customer</string>
    <string name="unbindingdev_notify">UnRegistered Customer</string>
    <string name="tab_menu_diagnose">Diagnostic</string>
    <string name="tab_menu_info">Repair Data</string>
    <string name="tab_menu_upgrade">Update</string>
    <string name="tab_menu_golo">golo</string>
    <string name="tab_menu_tools">Applications</string>
    <string name="tab_menu_mine">Profile</string>
    <string name="tab_menu_setting">Settings</string>
    <string name="common_login">Login</string>
    <string name="diagnose_america_title">America</string>
    <string name="diagnose_europe_title">European</string>
    <string name="diagnose_asia_title">Asian</string>
    <string name="diagnose_china_title">Chinese</string>
    <string name="tv_datastream_title">Name</string>
    <string name="tv_datastream_value">Value</string>
    <string name="tv_datastream_unit">Unit</string>
    <string name="mine_set_verify_email_tips">The verification code has been sent to the binded email, please log into your email to view it.</string>
    <string name="set_verify_get">Get verification code</string>
    <string name="mine_verification_code_prompt">Please input the verification code you received.</string>
    <string name="reset_password_button_confirm">Confirm</string>
    <string name="my_customer_car_type">Vehicle Type:</string>
    <string name="my_customer_car_num">License Plate:</string>
    <string name="my_customer_car_brand">Brand:</string>
    <string name="my_customer_car_model">Vehicle Model:</string>
    <string name="my_customer_car_vin">VIN:</string>
    <string name="my_customer_engine_num">Engine Number:</string>
    <string name="my_customer_car_year">Model Year:</string>
    <string name="my_customer_car_gearbox">Transmission:</string>
    <string name="my_customer_car_discharge">Displacement:</string>
    <string name="factory_mode">factory mode</string>
    <string name="remote_request_id">request id:</string>
    <string name="remote_user_name">username:</string>
    <string name="remote_nick_name">nickname:</string>
    <string name="remote_car_type">type:</string>
    <string name="remote_car_num">number:</string>
    <string name="remote_create_time">time:</string>
    <string name="remote_description">description:</string>
    <string name="repair_reserve_id">request id:</string>
    <string name="repair_user_name">user name:</string>
    <string name="repair_contact_name">contact name:</string>
    <string name="repair_contact_phone">contact phone:</string>
    <string name="repair_carinfo_id">carinfo id:</string>
    <string name="repair_reserve_time">reserve time:</string>
    <string name="repair_shedule_time">schedule time:</string>
    <string name="repair_created">created time:</string>
    <string name="repair_response">response time:</string>
    <string name="repair_remark">remark:</string>
</resources>