<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="?left_backgroud" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="vertical" android:id="@id/radiogroup_menu" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RadioButton android:id="@id/btn_diagnose" android:checked="true" android:text="@string/tab_menu_diagnose" android:drawableLeft="@drawable/select_btn_diagnose" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_info" android:text="@string/tab_menu_info" android:drawableLeft="@drawable/select_btn_info" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_upgrade" android:text="@string/tab_menu_upgrade" android:drawableLeft="@drawable/select_btn_upgrade" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_golo" android:text="@string/tab_menu_golo" android:drawableLeft="@drawable/select_btn_golo" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_tools" android:text="@string/tab_menu_tools" android:drawableLeft="@drawable/select_btn_tools" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_mine" android:text="@string/tab_menu_mine" android:drawableLeft="@drawable/select_btn_mine" style="@style/slidingmenuButtonStyle" />
        <RadioButton android:id="@id/btn_setting" android:text="@string/tab_menu_setting" android:drawableLeft="@drawable/select_btn_setting" style="@style/slidingmenuButtonStyle" />
    </RadioGroup>
</ScrollView>