<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textSize_small_base" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/tv_verify_tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/mine_set_verify_email_tips" />
    <Button android:textSize="@dimen/textSize_small_base" android:textColor="@color/white" android:id="@id/bt_send" android:background="@color/red" android:layout_width="fill_parent" android:layout_height="@dimen/mine_item_height" android:layout_margin="10.0dip" android:text="@string/set_verify_get" />
    <EditText android:textSize="@dimen/textSize_small_base" android:gravity="center" android:id="@id/et_verify_code" android:background="@drawable/item_bg" android:paddingLeft="5.0dip" android:layout_margin="10.0dip" android:hint="@string/mine_verification_code_prompt" android:maxLength="4" android:inputType="number" style="@style/setting_edittext_style" />
    <Button android:textSize="@dimen/textSize_small_base" android:textColor="@color/white" android:id="@id/bt_send_change" android:background="@color/red" android:layout_width="fill_parent" android:layout_height="@dimen/mine_item_height" android:layout_margin="10.0dip" android:text="@string/reset_password_button_confirm" />
</LinearLayout>