<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?diagnoseMainBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/lv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ListViewStyle.Title.Linear">
        <TextView android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_datastream_title" android:layout_weight="1.0" style="@style/ListViewStyle.Title.TextView" />
        <TextView android:id="@id/value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_datastream_value" android:layout_weight="2.0" style="@style/ListViewStyle.Title.TextView" />
        <TextView android:id="@id/statue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_datastream_unit" android:layout_weight="2.0" style="@style/ListViewStyle.Title.TextView" />
    </LinearLayout>
    <ListView android:id="@id/listview_activetest" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/lv_title" />
</RelativeLayout>